# rapid_monkey

./: Cargo.toml  README.md  scans.db
migrations/: 20250617_create_scans.sql
src/: main.rs  models.rs  routes.rs  scanner.rs
