[package]
name = "security_engine"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.9"
actix-cors = "0.7.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.40", features = ["full"] }
env_logger = "0.11"
log = "0.4"